--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<!-- TELA DE LOGIN -->
+<!-- LOGIN -->
 <div id="loginScreen" class="login-container">
     <h2>Acesso Restrito</h2>
 
@@ -21,7 +21,7 @@
     <p id="loginError" style="color: red; display:none;">Usuário ou senha incorretos.</p>
 </div>
 
-<!-- CONTEÚDO PROTEGIDO -->
+<!-- APP -->
 <div id="appContent" style="display:none;">
 
     <div class="logo-container">
@@ -32,6 +32,7 @@
 
     <div class="tables-container">
 
+        <!-- VITÓRIAS -->
         <div class="table-box">
             <h2>Ranking de Vitórias</h2>
             <table id="winTable">
@@ -46,6 +47,7 @@
             </table>
         </div>
 
+        <!-- DERROTAS -->
         <div class="table-box">
             <h2>Ranking de Derrotas</h2>
             <table id="lossTable">
