--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <tr>
                         <th>Jogador</th>
                         <th>Vitórias</th>
-                        <th>Ações</th>
+                        <th class="col-actions">Ações</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -90,7 +90,7 @@
                     <tr>
                         <th>Jogador</th>
                         <th>Derrotas</th>
-                        <th>Ações</th>
+                        <th class="col-actions">Ações</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
